# Stepflow

./: CLAUDE.md  README.md  pyproject.toml
scripts/: install.sh  skill_convert.py  skill_run.py
src/skillflow/: core.py  graph.py
src/skillflow/plugins/skill_converter/: AGENT.md  __init__.py
src/skillflow/plugins/skill_runner/: AGENT.md  __init__.py  runner.py
src/stepflow/plugins/skill_converter/: __init__.py
src/stepflow/plugins/skill_runner/: __init__.py
tests/: test_integration_configs.py  test_recovery.py
