[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skillflow-py"
version = "1.0.1"
description = "Config-agnostic LLM pipeline graph executor — turn skills into flows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Skillflow contributors"},
]
keywords = ["llm", "pipeline", "graph", "orchestrator", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pyyaml>=6.0",
    "ruff>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.15",
]

[project.urls]
Homepage = "https://github.com/linxuhao/SkillFlow"
Repository = "https://github.com/linxuhao/SkillFlow.git"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*.tests", "*.tests.*"]

[tool.setuptools.package-data]
"skillflow.tools" = ["*/tool.yaml"]
"skillflow.plugins.linter.tools" = ["*/tool.yaml"]
"skillflow.plugins.skill_runner" = ["AGENT.md"]
"skillflow.plugins.skill_converter" = ["AGENT.md", "*.yaml", "prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
